--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,5 +14,13 @@ html, body {
   overflow-x: hidden;
   font-family: lato;
 }
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 
 
